assets/styles/style.css
* {
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: "Roboto", Tahoma, sans-serif;
    background-color: #F0E3CA;
    margin: 0;
    padding: 0;
}

main h2 {
    font-size: 2em;
}

h1, h2 {
    text-transform: uppercase;
    font-family: "Caveat Brush", Verdana, Tahoma, sans-serif;
}

header {
    display: inline;
}

/* Navbar */
nav {
    display: flex;
    justify-content: space-between;
    align-items: center;

    background-color: #1B1A17;
    color: #F0E3CA;
    padding: 0.6rem;
    padding-inline: 4rem;
    position: sticky;
    top: 0;

    box-shadow: 0 4px 8px 0 rgba(27, 26, 23, 0.4);
    /* border-radius: 0 0 99px 99px; */
    
    /* Tambahan */
    /* width: 100%;
    z-index: 3; */
}

nav ul {
    display: flex;
    gap: 2rem;

    /* tambahan */
    /* margin: 0;
    padding: 0; */
    /* sementara aja */
    /* overflow-x: scroll;  */
}

nav ul li {
    list-style-type: none;
}

nav a {
    font-size: 18px;
    text-decoration: none;
    color: #F0E3CA;
    /* border: 5px solid blue; */
}

nav a:hover {
    font-weight: bold;
    color: #FF8303;
}

nav a:active {
    font-weight: 400;
}

h2.logo {
    color: #FF8303;
    /* font-size: 2rem; */
}

/* Jumbotron */
.jumbotron {
    font-size: 20px;
    padding: 8rem;
    /* width: 100%; */
    height: 100vh;

    background-image: linear-gradient(180deg, rgba(27, 26, 23, 1), rgba(27, 26, 23, 0.8), rgba(27, 26, 23, 0.7)),url("../images/biji-kopi.jpg");
    background-color: #1B1A17;
    text-align: center;

    box-shadow: 0 4px 8px 0 rgba(27, 26, 23, 0.4);
}

.jumbotron h1 {
    font-size: 4rem;
    color: #ff8303;
    text-align: center;
}

.jumbotron p {
    padding: 0 13em;
    color: #F0E3CA;
    text-align: center;
}

/* Main */
article h2 {
    text-align: center;
}

article, aside {
    padding: 20px;
    scroll-margin-top: 5rem;
}

/* Menu Minuman Makanan */
#menu section h3, #menu th {
    text-align: center;
}

td:nth-child(2) {
    text-align: right;
}

section.food-drink {
    gap: 2rem;
    /* flex-flow: row wrap; */
    flex: 1 1 20%;
}

img.food-drink-image {
    width: 30%;
    max-height: 60vh;
    object-fit: cover;
    object-position: center;
}

.menu-item {
    display: flex;
    justify-content: space-between;
}

/* Gambar di menu makan */
img.food-drink-image, #menu section .menu-item table{
    flex: 1;
    padding: .5rem;
    /* background-color: #A35709;  */
    /* sementara diwarnai */
}

/* Lokasi */
img.landmark-image {
    width: 60%;
    height: 30vh;
    /* aspect-ratio: 1/1; */
    object-fit: cover;
    object-position: center;
    margin-left: auto;
    margin-right: auto;
}

#lokasi section h3{
    text-align: center;
}

#lokasi section ul {
    list-style-type: none;
}

/* General Button */
button {
    padding: 0.8rem 2.5rem;
    border: 3px solid transparent;
    border-radius: 999px;
    margin-block-start: 1rem;

    background-color: #FF8303;
    text-transform: uppercase;
    font-size: 1rem;
    font-weight: 700;
    color: white;

    cursor: pointer;
    transition: all 0.15s ease-in;
}

button:hover {
    border: 3px solid transparent;
    background-color: #A35709;
}

button:active {
    transform: scale(.95);
}

button a {
    text-decoration: none;
    color: #F0E3CA;
}

.item > button {
    margin-top: auto;
    padding: 0.5rem 1rem;
}

/* Box Card Container */
/* Dipakai oleh Menu Makan, Cara Pesan, dan Lokasi */
.container {
    display: flex;
    /* flex-flow: row wrap; */
    gap: 2rem;
    justify-content: space-between;
    /* min-height: 40vh; */
    /* margin-inline: auto; */
}

.card {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
    border-radius: 10px;
    padding: 20px;
}

.item {
    display: flex;
    flex-flow: column;
    flex: 0 1 31%;
    min-height: 45vh;
}

/* Perangkat dengan layar lebar 1200px dan di bawahnya */
@media screen and (max-width: 1200px) {
    .jumbotron p {
        padding: 0;
        color: #F0E3CA;
    }

    #lokasi .container {
        display: flex;
        flex-flow: row wrap;
        /* gap: 2rem; */
        justify-content: space-evenly;
        min-height: 40vh;
        margin-inline: auto;
    }

    #lokasi .container section {
        display: flex;
        flex-flow: column wrap;
        flex: 1 1 40%;
    }

    #menu section img {
        width: 80%;
        max-height: 20vh;
        aspect-ratio: 1/1;
        /* border: 3px solid #1B1A17; */
        /* background-color: aqua; */
        object-fit: contain;
        object-position: center;
        margin-left: auto;
        margin-right: auto;
    }

    .menu-item {
        display: flex;
        flex-flow: column;
        flex: 0 1 31%;
        min-height: 45vh;
    }

    table {
        margin: 20px 10px;
        /* border: 2px solid #1B1A17; */
    }
}

/* Perangkat dengan layar lebar 768 dan di bawahnya */
@media screen and (max-width: 768px) {
    .jumbotron h1 {
        font-size: 3.3rem;
        color: #ff8303;
        text-align: center;
    }

    .jumbotron {
        padding: 0.7rem 2rem 10rem 2rem; /* top right bottom left */
        height: 100%;
    }

    #lokasi .container, .container {
        display: flex;
        /* flex-wrap: wrap; */
        flex-flow: column wrap;
        gap: 2rem;
        justify-content: center;
        min-height: 40vh;
        margin-inline: auto;
    }

    img.food-drink-image {
        background-color: aliceblue;
    }

    table {
        margin: 20px 10px;
        /* border: 2px solid #1B1A17; */
    }

    /* Navbar Hamburger 3 Strip */
    nav {
        display: flex;
        justify-content: space-between;
    }
    nav ul {
        display: flex;
        flex-flow: column nowrap;
        position: absolute;
        gap: 2rem;
        background-color: #1B1A17;
        transform: translateY(-150%);
        width: 90%;
        top: 65px;
        left: 0;
        z-index: -5;

        padding-bottom: 15px;
        transition: .6s ease;

        box-shadow: 0 4px 8px 0 rgba(27, 26, 23, 0.4);
    }

    nav ul>li {
        margin-top: 10px;
        /* padding-left: 0; */
        transition: .45s ease-in;
        text-align: center;
    }

    nav a:hover {
        font-weight: bold;
        color: #FF8303;
    }

    input:checked ~ ul {
        transform: translateY(0);
        transition: .4s ease-in;
    }

    .navbar-icon .stripe {
        width: 43px;
        height: 5px;
        background-color: #FF8303;
        margin: 5px 0;
        border-radius: 999px;
        transition: .35s ease-in;
    }

    .navbar-background {
        position: absolute;
        top: 0;
        left: 0;
        /* z-index: -3; */
        /* background-color: #1B1A17; */
        height: 100%;
        width: 100%;
        box-shadow: 0 4px 8px 0 rgba(27, 26, 23, 0.4);
    }

    input:checked ~ .navbar-icon .stripe:nth-child(1) {
        position: absolute;
        transform: rotate(45deg);
        background-color: #FF8303;
    }
    
    input:checked ~ .navbar-icon .stripe:nth-child(2) {
        display: none;
    }
    
    input:checked ~ .navbar-icon .stripe:nth-child(3) {
        transform: rotate(-45deg);
        background-color: #FF8303;
    }
}

#lokasi ul {
    padding: 0;
}

#lokasi ul > li > ul > li {
    padding: 10px;
}

input.navbar-button {
    display: none;
}

.navbar-background {
    position: absolute;
    top: 0;
    left: 0;
    z-index: -3;
    background-color: #1B1A17;
    height: 100%;
    width: 100%;
}

